<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="640"
    android:orientation="vertical"
    tools:context=".Fragments.Onboarding3Fragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80" />

    <ImageView
        android:layout_width="299dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="242.2"
        android:src="@mipmap/onbording3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="46.8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="63"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/onbording3_titel"
            android:textColor="@color/green"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="164"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/Onboarding3_text1_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/onbording3_text1"
                android:textColor="@color/blacgrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Onboarding3_text2_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/Onboarding3_text1_TV"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/onbording3_text2"
                android:textColor="@color/blacgrey"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/onbording3_text3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="       "
            android:textSize="11sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Onboarding3_text3_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/onbording3_text4"
                android:textColor="@color/blacgrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Onboarding3_text4_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/Onboarding3_text3_TV"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/onbording3_text5"
                android:textColor="@color/blacgrey"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/onbording3_text6"
            android:textColor="@color/blacgrey"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/onbording3_text7"
            android:textColor="@color/blacgrey"
            android:textSize="16sp"

            />


    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="45"-->
<!--        android:gravity="center">-->

<!--        <Button-->
<!--            android:id="@+id/Onboarding1_Botton"-->
<!--            android:layout_width="12dp"-->
<!--            android:layout_height="12dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:background="@drawable/circel_grey" />-->

<!--        <Button-->
<!--            android:id="@+id/Onboarding2_Botton"-->
<!--            android:layout_width="12dp"-->
<!--            android:layout_height="12dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:background="@drawable/circel_grey" />-->

<!--        <Button-->
<!--            android:id="@+id/Onboarding3_Botton"-->
<!--            android:layout_width="12dp"-->
<!--            android:layout_height="12dp"-->
<!--            android:background="@drawable/circel_red" />-->

<!--    </LinearLayout>-->

</LinearLayout>