<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Fragments.FragmentProfileEdit">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="16" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="327"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34">

            <TextView
                android:id="@+id/edit_profile_button_save_TV_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/edit_profile_save"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/edit_profile_button_close_IV_"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/add_place_close" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_personal_information_edit"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="13"/>

        <EditText
            android:id="@+id/edit_profile_name_ET_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="63"
            android:textColorHint="@color/hintTextColor"
            android:hint="@string/edit_profile_name"
            android:paddingBottom="16dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8" />

        <EditText
            android:id="@+id/edit_profile_email_ET_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="63"
            android:hint="@string/edit_profile_email"
            android:textColorHint="@color/hintTextColor"
            android:paddingBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:textColorHint="@color/hintTextColor"/>

        <EditText
            android:id="@+id/edit_profile_fon_ET_"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="63"
            android:hint="@string/edit_profile_fon"
            android:paddingBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="27" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="27"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_profile_date_o_b_1TV_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/edit_profile_date_of_berth"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12" />

            <TextView
                android:id="@+id/edit_profile_date_o_b2_TV_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="-0.02"
                android:lineSpacingExtra="5sp"
                android:text="@string/edit_profile_m_date"
                android:textColor="@color/hintTextColor"
                android:textSize="17sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="31" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="8sp"
                android:text="@string/edit_profile_language_choose"
                android:textColor="@color/hintTextColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="17sp"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="22" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lite_grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="24"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/edit_profile_getMobileAlerts_CB_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/GreenCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/edit_profile_alerts"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="36" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="9dp">

            <ImageView
                android:id="@+id/edit_profile_button_cleerAll_IV_"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@mipmap/add_plaice_garbeg" />

            <View
                android:layout_width="18dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/edit_profile_button_cleerAll_TV_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_dalete"
                android:textColor="@color/tablayotRed"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="103" />


    </LinearLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15" />


</LinearLayout>